--- a/css/mobile.css
+++ b/css/mobile.css
@@ -313,11 +313,8 @@
 
     main #galeria-fotos .seta {
         top: 108%;
-    }
-
-    
+    }   
 }
-
 
 @media (max-device-width: 768px) and (max-device-height: 1024px){
     body, main {
@@ -347,8 +344,41 @@
     main #galeria-fotos .seta {
         top: 122%;
     }
+}
 
+@media (max-device-width: 540px) and (max-device-height: 720px) {
+    body, main {
+        width: 780px;
+        height: 4550px;
+    }
+
+    main #home-principal {
+        height: 75vh;
+    }
+
+    main #nossa-história {
+        margin-bottom: -119px;
+    }
     
+    main #nossa-história .historia {
+        margin-top: -289px;
+    }
+
+    main #galeria-fotos {
+        height: 11%;
+    }
+    
+    main #galeria-fotos .foto {
+        height: 520px;
+    }
+
+    main #galeria-fotos .seta {
+        top: 210%;
+    }
+
+    main #galeria-fotos .direita {
+        right: -169px;
+    }
 }
 
 @media (max-device-width: 430px) and (max-device-height: 932px) {
